erDiagram
    FACILITIES ||--o{ USERS : has
    FACILITIES ||--o{ DONORS : has
    FACILITIES ||--o{ DONATION_RECORDS : has
    DONORS ||--o{ DONATION_RECORDS : donates
    DONATION_RECORDS ||--o| BLOODLETTING_RECORDS : verified_by
    DONATION_RECORDS ||--o{ BLOOD_INVENTORY : creates_entry
    FACILITIES ||--o{ BLOOD_INVENTORY : stores
    BLOOD_INVENTORY ||--o{ BLOOD_RELEASES : usage
    FACILITIES ||--o{ BLOOD_RELEASES : processes
    FACILITIES ||--o{ DONATION_SCHEDULES : organizes_events
    FACILITIES ||--o{ BLOOD_BANK_LOCATIONS : mapped_sites
    FACILITIES ||--o{ AUDIT_LOGS : scoped_logs
    USERS ||--o{ AUDIT_LOGS : actor
    USERS ||--o{ FACILITY_APPLICATIONS : reviewer
    FACILITIES ||--o{ FACILITY_APPLICATIONS : approved_into

    ROLES ||--o{ ROLE_HAS_PERMISSIONS : maps
    PERMISSIONS ||--o{ ROLE_HAS_PERMISSIONS : maps
    ROLES ||--o{ MODEL_HAS_ROLES : assigned
    PERMISSIONS ||--o{ MODEL_HAS_PERMISSIONS : assigned
    USERS ||--o{ MODEL_HAS_ROLES : role_holder
    USERS ||--o{ MODEL_HAS_PERMISSIONS : perm_holder

    FACILITIES {
      bigint id PK
      string code UK
      string name
      string type
      string contact_person
      string contact_number
      string email
      text address
      boolean is_active
    }

    USERS {
      bigint id PK
      bigint facility_id FK
      string name
      string email UK
      string phone
      string password
      boolean is_active
    }

    DONORS {
      bigint id PK
      bigint facility_id FK
      string first_name
      string last_name
      date birth_date
      enum blood_type
      string contact_number
      string email UK
      string password
      boolean is_online_registered
    }

    DONATION_RECORDS {
      bigint id PK
      bigint facility_id FK
      bigint donor_id FK
      bigint recorded_by FK
      string donation_no UK
      datetime donated_at
      enum blood_type
      int volume_ml
      date expiration_date
      enum status
    }

    BLOODLETTING_RECORDS {
      bigint id PK
      bigint facility_id FK
      bigint donation_record_id FK
      bigint medical_technologist_id FK
      datetime bloodletting_at
      enum verification_status
    }

    BLOOD_INVENTORY {
      bigint id PK
      bigint facility_id FK
      bigint donation_record_id FK
      enum blood_type
      int units_available
      date expiration_date
      enum status
    }

    BLOOD_RELEASES {
      bigint id PK
      bigint facility_id FK
      bigint blood_inventory_id FK
      bigint released_by FK
      datetime released_at
      int units_released
    }

    DONATION_SCHEDULES {
      bigint id PK
      bigint facility_id FK
      string title
      enum event_type
      date event_date
      time start_time
      time end_time
      string venue
      decimal latitude
      decimal longitude
      boolean is_public
      enum status
    }

    BLOOD_BANK_LOCATIONS {
      bigint id PK
      bigint facility_id FK
      decimal latitude
      decimal longitude
      string address
      string contact_number
    }

    FACILITY_APPLICATIONS {
      bigint id PK
      string organization_name
      enum facility_type
      string contact_person
      string contact_number
      string email
      string doh_accreditation_number
      string legitimacy_proof_path
      string doh_accreditation_proof_path
      enum status
      bigint reviewed_by FK
      bigint facility_id FK
    }
